package daw.pr.minesweeper.struct;

public enum StateSelf {
    MINE,
    CLEAR
}
